--- a/release/kubernetes-manifests.yaml
+++ b/release/kubernetes-manifests.yaml
@@ -65,7 +65,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: emailservice
+    app: emailservicees ressources
   ports:
   - name: grpc
     port: 5000
